Update Phase Plane Plotter.ipynb

--- a/Phase Plane Plotter.ipynb
+++ b/Phase Plane Plotter.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -76,8 +76,9 @@
     "U = matrix[0][0]*X + matrix[0][1]*Y\n",
     "V = matrix[1][0]*X + matrix[1][1]*Y\n",
     "magnitude = np.sqrt(U**2 + V**2)\n",
-    "U /= magnitude\n",
-    "V /= magnitude\n",
+    "with np.errstate(invalid='ignore', divide='ignore'):\n",
+    "    U = np.where(magnitude != 0, U / magnitude, 0)\n",
+    "    V = np.where(magnitude != 0, V / magnitude, 0)\n",
     "\n",
     "plt.figure(figsize=(8,8))\n",
     "plt.quiver(X, Y, U, V, color='blue')\n",
